[gd_scene load_steps=10 format=3 uid="uid://b68fsb7bbgew3"]

[ext_resource type="ArrayMesh" uid="uid://dn7wg6q61t17f" path="res://Models/Crystal.obj" id="1_b7q8t"]
[ext_resource type="Script" path="res://Scripts/GameEndingScript.gd" id="1_p6x81"]
[ext_resource type="Material" uid="uid://cb8ps2y0i7xub" path="res://Materials/CrystalMaterial.tres" id="2_q856j"]
[ext_resource type="BoxMesh" uid="uid://bonxs2xq7cwio" path="res://Models/GameEndingParticles.tres" id="4_tyiip"]

[sub_resource type="BoxShape3D" id="BoxShape3D_08ubj"]
size = Vector3(4, 4, 4)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_88xt4"]
emission_shape = 3
emission_box_extents = Vector3(2, 0.5, 2)
gravity = Vector3(0, 2, 0)
scale_max = 1.5

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yqlp7"]
emission_shape = 3
emission_box_extents = Vector3(20, 1, 20)
gravity = Vector3(0, 1.5, 0)
linear_accel_max = 10.0

[sub_resource type="Animation" id="Animation_bvu5e"]
resource_name = "Spin"
loop_mode = 1
step = 0.25
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.25, 1, 0, 0.707107, 0, 0.707107, 0.5, 1, 0, 1, 0, -4.37114e-08, 0.75, 1, 0, -0.707107, 0, 0.707107, 1, 1, 0, 8.74228e-08, 0, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_32wte"]
_data = {
"Spin": SubResource("Animation_bvu5e")
}

[node name="GameEndingCrystal" type="Area3D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_p6x81")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_b7q8t")
surface_material_override/0 = ExtResource("2_q856j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_08ubj")

[node name="CrystalParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.677201, 0)
amount = 16
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_88xt4")
draw_pass_1 = ExtResource("4_tyiip")

[node name="EndGameParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.677201, 0)
emitting = false
amount = 120
lifetime = 7.0
process_material = SubResource("ParticleProcessMaterial_yqlp7")
draw_pass_1 = ExtResource("4_tyiip")

[node name="CrystalLight" type="OmniLight3D" parent="."]
light_color = Color(0.941176, 0, 0.227451, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spin"
speed_scale = 0.2
libraries = {
"": SubResource("AnimationLibrary_32wte")
}

[node name="EndGameTimer" type="Timer" parent="."]
wait_time = 5.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="EndGameTimer" to="." method="_on_timer_timeout"]
